<resources>
    <string name="app_name">DishApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">add_button</string>
    <string name="dish_image">dish_image</string>
    <string name="dish_name_hint">Dish name</string>
    <string name="ingredients_hint">Ingredients include:</string>
    <string name="btn_save">SAVE</string>
    <string name="btn_edit">edit_button</string>
    <string name="btn_delete">delete_button</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="label_method">+ Method: %1$s</string>
    <string name="label_ingredients">+ Ingredients: %1$s</string>
    <string name="dish_image_desc">Dish photo (tap to select)</string>
    <string name="pick_image_hint">Pick an image for your dish</string>
    <string name="dishes_list">YOUR DISHES LIST</string>
    <string name="empty_dishes">No dishes yet, please add one.</string>
    <string name="dish_icon">dish icon</string>
    <string name="nav_back">navigate back</string>
    <string name="enter_your_phone_number_to_sign_in">Enter your phone number to sign in</string>
    <string name="input_phone_number_hint">Phone number</string>
    <string name="terms_of_service_agreement">I agree to the Terms of Service, Policy</string>
    <string name="sign_in">SIGN IN</string>
    <string name="or_sign_in_with">Or sign in with</string>
    <string name="email">Email</string>
    <string name="auth_icon">auth icon</string>
    <string name="google">google</string>
    <string name="apple">apple</string>
    <string name="enter_your_email_address_to_sign_in">Enter your email address to sign in</string>
    <string name="email_hint">Email</string>
    <string name="phone">phone</string>
    <string name="check_your_message">Check your message</string>
    <string name="verification_message">Your one-time verification code was sent to %1$s</string>
    <string name="send_again">Send again</string>
    <string name="otp_timer">0:%1$02d</string>
    <string name="token_display">Your token:\n%s</string>
    <string name="client_id">382515046157-pptujttos4cmapm8n2pv5gj00m95edc0.apps.googleusercontent.com</string>
    <string name="user_name_fmt">Name: %1$s</string>
    <string name="user_email_fmt">Email: %1$s</string>
    <string name="custom_country_picker">Custom country picker</string>
    <string name="choose_country">Choose your country</string>
    <string name="dishes">Dishes list</string>
    <string name="account">Account</string>
    <string name="user_avatar">User avatar</string>
    <string name="user_name">User name</string>
    <string name="email_holder">email@example.com</string>
    <string name="other_information">Other information</string>
    <string name="loading">(Loading…)</string>
    <string name="no_user">Can not find user</string>
    <string name="null_user">User info is null</string>
    <string name="label_not_found">Not found</string>
    <string name="log_out">LOG OUT</string>
    <string name="logout_ques">Do you want to log out? You will need to sign in again to continue.</string>
    <string name="delete_confirm_message">Are you sure you want to delete this dish?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_logout">YES LOG OUT</string>
    <string name="cancel_logout">STAY LOGGED IN</string>
    <string name="confirm_delete">YES DELETE IT</string>
    <string name="cancel_delete">NO KEEP IT</string>
</resources>