<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bs_root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/bs_rounded_bg"
    android:layout_margin="16dp">

    <ImageButton
        android:id="@+id/btnChevron"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:background="?selectableItemBackgroundBorderless"
        android:scaleType="center"
        android:src="@drawable/chevron_back"
        android:contentDescription="@string/nav_back"
        app:tint="?attr/colorOnSurface" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_out"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:fontFamily="@font/raleway_semibold"
        android:textAlignment="center"
        android:layout_marginBottom="8dp"
        />

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout_ques"
        android:textAppearance="?attr/textAppearanceBody2"
        android:fontFamily="@font/raleway_regular"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:backgroundTint="@android:color/transparent" />

        <Space
            android:layout_width="12dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/confirm"
            android:backgroundTint="@android:color/transparent" />

    </LinearLayout>

</LinearLayout>
