<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="74dp"
        android:contentDescription="@string/nav_back"
        android:src="@drawable/chevron_back"
        app:layout_constraintBottom_toTopOf="@+id/tvAuthTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAuthTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/raleway_semibold"
        android:text="@string/enter_your_phone_number_to_sign_in"
        android:textAlignment="center"
        android:textColor="#0C0A29"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/phoneInputContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBack" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/phoneInputContainer"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_phone_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthTitle">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="7dp"
            app:ccp_textSize="16sp"
            app:ccpDialog_textColor="#91673AB7"
            app:ccp_autoDetectCountry="true"
            app:ccp_showFlag="true"
            app:ccp_showNameCode="true"
            app:ccp_useDummyEmojiForPreview="true"
            app:ccp_useFlagEmoji="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/vDivider"
            android:layout_width="1dp"
            android:layout_height="28dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:background="#EBEBEB"
            app:layout_constraintStart_toEndOf="@+id/ccp"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="5dp"
            android:autofillHints="phone"
            android:background="@null"
            android:fontFamily="@font/raleway_regular"
            android:hint="@string/input_phone_number_hint"
            android:inputType="phone"
            android:textColor="#000000"
            android:textColorHint="#91673AB7"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/vDivider"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/emailInputContainer"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_phone_input"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAuthTitle">

        <ImageView
            android:id="@+id/ivEmailIcon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="14dp"
            android:contentDescription="@string/email"
            android:src="@drawable/ic_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="14dp"
            android:autofillHints="emailAddress"
            android:background="@null"
            android:fontFamily="@font/raleway_regular"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textColor="#000000"
            android:textColorHint="#91673AB7"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivEmailIcon"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/inputBarrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="phoneInputContainer,emailInputContainer" />

    <LinearLayout
        android:id="@+id/termsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/btnSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputBarrier">

        <CheckBox
            android:id="@+id/cbAgree"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:button="@drawable/checkbox"
            android:importantForAutofill="no"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTermsText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/terms_of_service_agreement"
            android:textColor="#000000"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/bg_sign_in_button"
        android:elevation="8dp"

        android:fontFamily="@font/raleway_semibold"
        android:gravity="center"
        android:letterSpacing="0.08"
        android:stateListAnimator="@null"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        android:translationZ="20dp"

        app:cornerRadius="12dp"
        app:layout_constraintBottom_toTopOf="@+id/tvOrSignInWith"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/termsContainer" />

    <TextView
        android:id="@+id/tvOrSignInWith"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/raleway_regular"
        android:gravity="center"
        android:text="@string/or_sign_in_with"
        android:textColor="#0C0A29"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/authMethodsContainer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

    <LinearLayout
        android:id="@+id/authMethodsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="52dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvOrSignInWith">

        <LinearLayout
            android:id="@+id/btnAuthToggle"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_auth_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ivAuthIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/email"
                android:src="@drawable/ic_email" />

            <TextView
                android:id="@+id/tvAuthText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/email"
                android:textAlignment="center"
                android:textColor="#0C0A29"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAuthGoogle"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_auth_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/btnAuthToggle">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/google"
                android:src="@drawable/ic_google" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/google"
                android:textAlignment="center"
                android:textColor="#0C0A29"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnAuthApple"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_auth_button"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintStart_toEndOf="@id/btnAuthGoogle"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:contentDescription="@string/apple"
                android:src="@drawable/ic_apple" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/apple"
                android:textAlignment="center"
                android:textColor="#0C0A29"
                android:textSize="12sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnCustomPicker"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_flag"
        android:contentDescription="@string/custom_country_picker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authMethodsContainer"
        app:layout_constraintEnd_toEndOf="parent"/>

<!--    <TextView-->
<!--        android:id="@+id/tvUserName"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:text="@string/user_name_fmt"-->
<!--        android:textSize="20sp"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/authMethodsContainer" />-->

<!--    <TextView-->
<!--        android:id="@+id/tvUserEmail"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="5dp"-->
<!--        android:text="@string/user_email_fmt"-->
<!--        android:textSize="20sp"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tvUserName" />-->

<!--    <ImageView-->
<!--        android:id="@+id/ivUserPhoto"-->
<!--        android:layout_width="64dp"-->
<!--        android:layout_height="64dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:scaleType="centerCrop"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tvUserEmail" />-->


</androidx.constraintlayout.widget.ConstraintLayout>
