<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:padding="8dp"
    app:cardBackgroundColor="@color/card_bg"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivDish"
            android:contentDescription="@string/dish_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/ivDish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivDish"/>

        <TextView
            android:id="@+id/tvType"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="5dp"
            android:textSize="11sp"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@id/ivDish"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEdit"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:minWidth="80dp"
            app:backgroundTint="@color/btn_edit_bg"
            android:text="@string/edit"
            android:textAllCaps="true"
            app:layout_constraintStart_toStartOf="@id/tvType"
            app:layout_constraintTop_toBottomOf="@id/tvType"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDelete"
            app:layout_constraintHorizontal_chainStyle="packed"
            android:layout_marginTop="5dp"
            android:textColor="@color/btn_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnDelete"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:minWidth="90dp"
            app:backgroundTint="@color/btn_delete_bg"
            android:text="@string/delete"
            android:textAllCaps="true"
            app:layout_constraintStart_toEndOf="@id/btnEdit"
            app:layout_constraintTop_toBottomOf="@id/tvType"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/btn_text"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
